force-app/main/default/objects/CSA_Inquiries__c/CSA_Inquiries__c.object-meta.xml
<CustomObject>
    <description>Corp Sales Commisions Administration team related requests</description>
    <label>CSA Inquiries</label>
    <nameField>
        <displayFormat>CSA{000000}</displayFormat>
        <label>CSA Inquiries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSA Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>