force-app/main/default/objects/CSA_Inquiries__c/fields/Action_Add_Modify__c.field-meta.xml
<CustomField>
    <fullName>Action_Add_Modify__c</fullName>
    <label>Action (Add/Modify)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADD NEW RECORD</fullName>
            </value>
            <value>
                <fullName>MODIFY EXISTING RECORD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>