force-app/main/default/objects/CSA_Inquiries__c/fields/Additional_URLs_Affected__c.field-meta.xml
<CustomField>
    <fullName>Additional_URLs_Affected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional URLs Affected</label>
    <type>TextArea</type>
</CustomField>