force-app/main/default/objects/CSA_Inquiries__c/fields/Affected_Commission__c.field-meta.xml
<CustomField>
    <fullName>Affected_Commission__c</fullName>
    <label>Affected Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>