force-app/main/default/objects/CSA_Inquiries__c/fields/Affected_Role__c.field-meta.xml
<CustomField>
    <fullName>Affected_Role__c</fullName>
    <label>Affected Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TERRITORY REP</fullName>
            </value>
            <value>
                <fullName>TRR</fullName>
            </value>
            <value>
                <fullName>CCR</fullName>
            </value>
            <value>
                <fullName>DSR</fullName>
            </value>
            <value>
                <fullName>DSM</fullName>
            </value>
            <value>
                <fullName>FSM</fullName>
            </value>
            <value>
                <fullName>BDSM</fullName>
            </value>
            <value>
                <fullName>SDSM</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>SSM</fullName>
            </value>
            <value>
                <fullName>RECRUITING MGR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>