force-app/main/default/objects/CSA_Inquiries__c/fields/Affected_Unit__c.field-meta.xml
<CustomField>
    <fullName>Affected_Unit__c</fullName>
    <label>Affected Unit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>