force-app/main/default/objects/CSA_Inquiries__c/fields/Approved_Reject_Status__c.field-meta.xml
<CustomField>
    <fullName>Approved_Reject_Status__c</fullName>
    <label>Approved/Reject Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPROVE</fullName>
            </value>
            <value>
                <fullName>REJECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>