force-app/main/default/objects/CSA_Inquiries__c/fields/Approved_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Approved_Revenue__c</fullName>
    <label>Approved Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>