force-app/main/default/objects/CSA_Inquiries__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>District_Number__r.Area__c</formula>
    <inlineHelpText>Formula value based on District Number</inlineHelpText>
    <label>Area</label>
    <type>Text</type>
</CustomField>