force-app/main/default/objects/CSA_Inquiries__c/fields/Bank_Level__c.field-meta.xml
<CustomField>
    <fullName>Bank_Level__c</fullName>
    <label>Bank Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>