force-app/main/default/objects/CSA_Inquiries__c/fields/BISID_ClientID__c.field-meta.xml
<CustomField>
    <fullName>BISID_ClientID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BIS ID / Client ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>