force-app/main/default/objects/CSA_Inquiries__c/fields/Bonus_Effected__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Effected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a Bonus Unit Discrepancy is applicable</description>
    <inlineHelpText>If checked, then a Bonus Unit Discrepancy is applicable</inlineHelpText>
    <label>Bonus Effected</label>
    <type>Checkbox</type>
</CustomField>