force-app/main/default/objects/CSA_Inquiries__c/fields/Bonus_Expected__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Expected__c</fullName>
    <label>Bonus Expected</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>