force-app/main/default/objects/CSA_Inquiries__c/fields/Bonus_Received__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Received__c</fullName>
    <label>Bonus Received</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>