force-app/main/default/objects/CSA_Inquiries__c/fields/Bonus_Type__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Type__c</fullName>
    <label>Bonus Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIRCLE</fullName>
            </value>
            <value>
                <fullName>MONTHLY PAYROLL UNIT</fullName>
            </value>
            <value>
                <fullName>MONTHLY REVENUE</fullName>
            </value>
            <value>
                <fullName>MONTHLY SR ACHIEVEMENT</fullName>
            </value>
            <value>
                <fullName>PIP</fullName>
            </value>
            <value>
                <fullName>QUARTERLY PAYROLL UNIT</fullName>
            </value>
            <value>
                <fullName>QUARTERLY REVENUE</fullName>
            </value>
            <value>
                <fullName>SR PAYMARK</fullName>
            </value>
            <value>
                <fullName>TRR REVENUE PAYMARK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>