force-app/main/default/objects/CSA_Inquiries__c/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <label>Branch Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>