force-app/main/default/objects/CSA_Inquiries__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Justification</label>
    <type>TextArea</type>
</CustomField>