force-app/main/default/objects/CSA_Inquiries__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>