force-app/main/default/objects/CSA_Inquiries__c/fields/Client_Platform__c.field-meta.xml
<CustomField>
    <fullName>Client_Platform__c</fullName>
    <label>Client Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>HR Solutions</fullName>
            </value>
            <value>
                <fullName>HR Solutions Advantage</fullName>
            </value>
            <value>
                <fullName>HR Solutions MMS</fullName>
            </value>
            <value>
                <fullName>HR Solutions NP</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>Non Payroll</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>