force-app/main/default/objects/CSA_Inquiries__c/fields/Client_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Client Start Date</label>
    <type>Date</type>
</CustomField>