force-app/main/default/objects/CSA_Inquiries__c/fields/Commissionable_Year__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Year__c</fullName>
    <description>Added per BAU Case #25947635</description>
    <label>Commissionable Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>