force-app/main/default/objects/CSA_Inquiries__c/fields/Comp_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan_Type__c</fullName>
    <label>Comp Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TENURED SALES REP</fullName>
            </value>
            <value>
                <fullName>NEW HIRE SALES REP</fullName>
            </value>
            <value>
                <fullName>TERRITORY READY REP</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
            <value>
                <fullName>CCR</fullName>
            </value>
            <value>
                <fullName>TIERED SR</fullName>
            </value>
            <value>
                <fullName>CORE SR RECRUITER</fullName>
            </value>
            <value>
                <fullName>CORE SR RECRUITER MGR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>