force-app/main/default/objects/CSA_Inquiries__c/fields/Corporate_Comment__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corporate Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>