force-app/main/default/objects/CSA_Inquiries__c/fields/District_Number__c.field-meta.xml
<CustomField>
    <fullName>District_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Organizational Structure Object</inlineHelpText>
    <label>District Number</label>
    <referenceTo>Organization_Structure__c</referenceTo>
    <relationshipLabel>CSA Inquiries (District Number)</relationshipLabel>
    <relationshipName>CSA_Inquiries4</relationshipName>
    <type>Lookup</type>
</CustomField>