force-app/main/default/objects/CSA_Inquiries__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AGENCY</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>BENETRAC</fullName>
            </value>
            <value>
                <fullName>BUSINESS DEV</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER SUCCESS</fullName>
            </value>
            <value>
                <fullName>HNB</fullName>
                <label>HNB - HNBF</label>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>HR SERVICES</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MMS - Revenue on Submission</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>P&amp;C</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>RETIREMENT SERVICES</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>STRATEGIC ACCOUNTS</fullName>
            </value>
            <value>
                <fullName>VIRTUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>