force-app/main/default/objects/CSA_Inquiries__c/fields/Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month__c</fullName>
    <description>APR0168566</description>
    <label>Fiscal Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>Apr</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>Jun</fullName>
            </value>
            <value>
                <fullName>Jul</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sep</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>