force-app/main/default/objects/CSA_Inquiries__c/fields/Moving_From_District__c.field-meta.xml
<CustomField>
    <fullName>Moving_From_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moving From District #</label>
    <referenceTo>Organization_Structure__c</referenceTo>
    <relationshipLabel>CSA Inquiries (Organization Structure)</relationshipLabel>
    <relationshipName>CSA_Inquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>