force-app/main/default/objects/CSA_Inquiries__c/fields/Moving_From_DSM_del__c.field-meta.xml
<CustomField>
    <fullName>Moving_From_DSM_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moving From DSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSA_Inquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>