force-app/main/default/objects/CSA_Inquiries__c/fields/New_Units__c.field-meta.xml
<CustomField>
    <fullName>New_Units__c</fullName>
    <label>New Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>