force-app/main/default/objects/CSA_Inquiries__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link an Opp to a CSA Inquiry for Commission Audit requests</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CSA Inquiries</relationshipLabel>
    <relationshipName>CSA_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>