force-app/main/default/objects/CSA_Inquiries__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>for Diamond Club Discrep</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>for Diamond Club Discrep</inlineHelpText>
    <label>Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>