force-app/main/default/objects/CSA_Inquiries__c/fields/Original_Units__c.field-meta.xml
<CustomField>
    <fullName>Original_Units__c</fullName>
    <label>Original Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>