force-app/main/default/objects/CSA_Inquiries__c/fields/Payroll_Spec_Branch_No__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Spec_Branch_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Spec Branch #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>