force-app/main/default/objects/CSA_Inquiries__c/fields/Processing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Processing_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing Branch</label>
    <length>25</length>
    <type>Text</type>
</CustomField>