force-app/main/default/objects/CSA_Inquiries__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>