force-app/main/default/objects/CSA_Inquiries__c/fields/Product_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Product_Picklist__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3(16) Fiduciary</fullName>
            </value>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Add on Clock</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>AFLAC</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ASO Non Payroll</fullName>
            </value>
            <value>
                <fullName>ASO - Payroll Only</fullName>
            </value>
            <value>
                <fullName>ASO Setup</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Auto Enroll</fullName>
            </value>
            <value>
                <fullName>Background Checks / EE Screening</fullName>
            </value>
            <value>
                <fullName>Background Screen Setup</fullName>
            </value>
            <value>
                <fullName>Balance Benefits</fullName>
            </value>
            <value>
                <fullName>Benefit Accrual</fullName>
            </value>
            <value>
                <fullName>Benefit Accrual</fullName>
            </value>
            <value>
                <fullName>Benefit Accrual Setup</fullName>
            </value>
            <value>
                <fullName>Benefit Accrual Setup</fullName>
            </value>
            <value>
                <fullName>Benetrac</fullName>
            </value>
            <value>
                <fullName>Biz2Credit</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>BOP</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Business Process Outsourcing</fullName>
            </value>
            <value>
                <fullName>CCP</fullName>
            </value>
            <value>
                <fullName>Check Insertion</fullName>
            </value>
            <value>
                <fullName>Check Signing</fullName>
            </value>
            <value>
                <fullName>Check Signing</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
            <value>
                <fullName>Cobra Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>