force-app/main/default/objects/CSA_Inquiries__c/fields/Product_Picklist_Single__c.field-meta.xml
<CustomField>
    <fullName>Product_Picklist_Single__c</fullName>
    <description>Added per BAU Case #25947635</description>
    <label>Referral Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ASO Non Payroll</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>Employee Screening (PESS)</fullName>
            </value>
            <value>
                <fullName>ERTC</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>ExpenseWire</fullName>
            </value>
            <value>
                <fullName>Flex Ben Admin Essentials</fullName>
            </value>
            <value>
                <fullName>Flextime / StratusTime</fullName>
            </value>
            <value>
                <fullName>Flock Ben Admin</fullName>
            </value>
            <value>
                <fullName>Handbook</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Hiring</fullName>
            </value>
            <value>
                <fullName>HR Analytics</fullName>
            </value>
            <value>
                <fullName>HR Essentials</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>MSP Standalone Onboarding / Recruiting</fullName>
            </value>
            <value>
                <fullName>OASIS PEO</fullName>
            </value>
            <value>
                <fullName>OASIS PEO - Revenue on Submission</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Onboarding / Hiring</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PBA</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>PEO - Existing Client at 10%</fullName>
            </value>
            <value>
                <fullName>PEO - New Client at 30%</fullName>
            </value>
            <value>
                <fullName>PEO - Revenue on Submission</fullName>
            </value>
            <value>
                <fullName>PEO - Rev on Sub - Existing Client at 10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>