force-app/main/default/objects/CSA_Inquiries__c/fields/Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Start Date</label>
    <type>Date</type>
</CustomField>