force-app/main/default/objects/CSA_Inquiries__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSA Inquiries</relationshipLabel>
    <relationshipName>CSA_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>