force-app/main/default/objects/CSA_Inquiries__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>100% Discount</fullName>
            </value>
            <value>
                <fullName>30 Day Policy</fullName>
            </value>
            <value>
                <fullName>ACA Notice Support Fee / State Filing</fullName>
            </value>
            <value>
                <fullName>Adjustment due to correction runs and/or correction checks</fullName>
            </value>
            <value>
                <fullName>Adjustment to an Incorrectly Submitted First Round Case</fullName>
            </value>
            <value>
                <fullName>AICPA</fullName>
            </value>
            <value>
                <fullName>Already Audit Rejected</fullName>
            </value>
            <value>
                <fullName>Already Existing in Current Month/Previously Paid</fullName>
            </value>
            <value>
                <fullName>APP Count Adjustment</fullName>
            </value>
            <value>
                <fullName>Back Dated Cancel Date</fullName>
            </value>
            <value>
                <fullName>Back Dated Effective Date</fullName>
            </value>
            <value>
                <fullName>Below 5% Variance Threshold</fullName>
            </value>
            <value>
                <fullName>Billing Corrected</fullName>
            </value>
            <value>
                <fullName>Calculation is Correct</fullName>
            </value>
            <value>
                <fullName>Change of Owner</fullName>
            </value>
            <value>
                <fullName>Change of Owner, EIN Change</fullName>
            </value>
            <value>
                <fullName>Change of Owner, NO EIN Change</fullName>
            </value>
            <value>
                <fullName>Chargeback Adjustment</fullName>
            </value>
            <value>
                <fullName>Client Cancelled Product</fullName>
            </value>
            <value>
                <fullName>Client Not Found</fullName>
            </value>
            <value>
                <fullName>Client Re-Organized</fullName>
            </value>
            <value>
                <fullName>Current Sales Promotion</fullName>
            </value>
            <value>
                <fullName>Delayed or Incomplete Setup</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Run</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Duplicate Sale in Reporting</fullName>
            </value>
            <value>
                <fullName>EAP Updated Late</fullName>
            </value>
            <value>
                <fullName>Enrollments Added After Month End</fullName>
            </value>
            <value>
                <fullName>Exception to Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>