force-app/main/default/objects/CSA_Inquiries__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACA Notice Support Fee/State Filing Fees</fullName>
            </value>
            <value>
                <fullName>Adjustment due to correction runs and/or correction checks</fullName>
            </value>
            <value>
                <fullName>AICPA</fullName>
            </value>
            <value>
                <fullName>App/EE Count Missing</fullName>
            </value>
            <value>
                <fullName>App/EE Missing</fullName>
            </value>
            <value>
                <fullName>Back Dated Cancel Date</fullName>
            </value>
            <value>
                <fullName>Billing Corrected</fullName>
            </value>
            <value>
                <fullName>Change of Owner</fullName>
            </value>
            <value>
                <fullName>Change of Owner, EIN Change</fullName>
            </value>
            <value>
                <fullName>Change of Owner, NO EIN Change</fullName>
            </value>
            <value>
                <fullName>Chargeback - Merchant Services</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>Client Re-Organized</fullName>
            </value>
            <value>
                <fullName>Conversion/Renewal</fullName>
            </value>
            <value>
                <fullName>Cross Off Chargeback - Upgraded to ASO or PEO</fullName>
            </value>
            <value>
                <fullName>Current Sales Promotion</fullName>
            </value>
            <value>
                <fullName>Delayed or Incomplete Setup</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Duplicate in Reporting</fullName>
            </value>
            <value>
                <fullName>EAP Updated Late</fullName>
            </value>
            <value>
                <fullName>Exception Approval</fullName>
            </value>
            <value>
                <fullName>Exception Approval (VP Approval must be attached)</fullName>
            </value>
            <value>
                <fullName>H&amp;B Existing Client</fullName>
            </value>
            <value>
                <fullName>Incorrect # of enrollments</fullName>
            </value>
            <value>
                <fullName>Incorrect Discount</fullName>
            </value>
            <value>
                <fullName>Incorrect EE Count</fullName>
            </value>
            <value>
                <fullName>Incorrect Frequency</fullName>
            </value>
            <value>
                <fullName>Late Ancillary Add</fullName>
            </value>
            <value>
                <fullName>Miscalculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>